src/test/testData/highlighting/functionalElement.conf
filter {
    if "string" in [field] {
        grok {
            match => { "message" => [<error descr="<value> expected, got '%'">%</error>{TIMESTAMP_ISO8601:date}] %{GREEDYDATA:trash}: { %{WORD}%{GREEDYDATA:core_message}"}
        }
    } else if [field] == "string" and [field] == 1 {
        drop {}
    } else if [field] =~  {
        drop {}
    }
}
